--- a/Projektarbete/index.html
+++ b/Projektarbete/index.html
@@ -33,8 +33,10 @@
    <div class="container">
       <div class="container-center">
        <h1>Download our app and start using our product today!</h1>
+       <div class="badge-container">
        <img class="badge" src="img/googleplay.png" alt="Google Play Download">
        <img class="badge" src="img/appstore.png" alt="App Store Download">
+       </div>
    </div>
  </section>
  <section id="section-two">
