--- a/Projektarbete/index.html
+++ b/Projektarbete/index.html
@@ -15,39 +15,45 @@
     <div class="nav-header">
       <div class="container">
         <div class="nav-logo">
-          <img src="img/logo.PNG" alt="pay_app_logo">
-          <p>company</p>
+          <div class="logo">
+            <a href="#">
+              <img src="img/logo.PNG" alt="logo">
+            </a>
+          </div>
+          <a href="#">
+            <p>company</p>
+          </a>
         </div>
         <div onclick="toggleMenu()" class="menu-icon">
           <img class="icon" src="img/menu.svg" alt="menu">
         </div>
       </div>
     </div>
-      <div class="dropdown">
-        <div id="dropdown" class="dropdown-content">
-            <div class="menu-items">
-              <ul>
-                <li>History</li>
-                <li>Contact</li>
-                <li>Cookies</li>
-                <li>Privacy Policy</li>
-                <li>FAQ</li>
-              </ul>
-            </div>
-          </div>
+    <div class="dropdown">
+      <div id="dropdown" class="dropdown-content">
+        <div class="menu-items">
+          <ul>
+            <li>history</li>
+            <li>contact</li>
+            <li>cookies</li>
+            <li>privacy policy</li>
+            <li>FAQ</li>
+          </ul>
+        </div>
       </div>
+    </div>
   </nav>
-  <section id="section-zero">
+  <section id="section-zero" class="center">
     <div class="background-image background1">
       <div class="banner">
-        <div class="container">
+        <div class="container center">
           <h1>company</h1>
         </div>
       </div>
     </div>
   </section>
-  <section id="section-one">
-    <div class="container">
+  <section id="section-one" class="center">
+    <div class="container center">
       <div class="container-center">
         <h1>Download the app and start using our product today!</h1>
         <div class="badge-container">
@@ -74,9 +80,9 @@
       </div>
     </div>
   </section>
-  <section id="section-three">
+  <section id="section-three" class="center">
     <div class="bottom banner background-image background2">
-      <div class="container">
+      <div class="container center">
         <h1>company</h1>
         <h2>A very cool slogan or catchphrase.</h2>
       </div>
@@ -85,14 +91,15 @@
   <footer>
     <ul>
       <p>About us</p>
-      <li>History</li>
-      <li>Contact</li>
-      <li>Cookies</li>
-      <li>Privacy Policy</li>
+      <li>history</li>
+      <li>contact</li>
+      <li>cookies</li>
+      <li>privacy policy</li>
       <li>FAQ</li>
     </ul>
   </footer>
 </body>
 
 <script src="script.js"></script>
+
 </html>
