--- a/Projektarbete/index.html
+++ b/Projektarbete/index.html
@@ -14,7 +14,7 @@
   <nav>
     <div class="nav-header">
       <div class="container">
-        <div class="nav-logo">
+        <div class="nav-logo center">
           <div class="logo">
             <a href="#">
               <img src="img/logo.PNG" alt="logo">
@@ -30,7 +30,7 @@
       </div>
     </div>
     <div class="dropdown">
-      <div id="dropdown" class="dropdown-content">
+      <div id="dropdown" class="dropdown-content center">
         <div class="menu-items">
           <ul>
             <li>history</li>
@@ -44,8 +44,8 @@
     </div>
   </nav>
   <section id="section-zero" class="center">
-    <div class="background-image background1">
-      <div class="banner">
+    <div class="background-image background1 center">
+      <div class="banner center">
         <div class="container center">
           <h1>company</h1>
         </div>
@@ -53,14 +53,13 @@
     </div>
   </section>
   <section id="section-one" class="center">
-    <div class="container center">
-      <div class="container-center">
-        <h1>Download the app and start using our product today!</h1>
-        <div class="badge-container">
-          <img class="badge" src="img/googleplay.png" alt="Google Play Download">
-          <img class="badge" src="img/appstore.png" alt="App Store Download">
-        </div>
+    <div class="download container center">
+      <h1>Download the app and start using our product today!</h1>
+      <div class="badge-container center">
+        <img class="badge" src="img/googleplay.png" alt="Google Play Download">
+        <img class="badge" src="img/appstore.png" alt="App Store Download">
       </div>
+    </div>
   </section>
   <section id="section-two">
     <div class="container">
@@ -81,14 +80,14 @@
     </div>
   </section>
   <section id="section-three" class="center">
-    <div class="bottom banner background-image background2">
+    <div class="bottom banner background-image background2 center">
       <div class="container center">
         <h1>company</h1>
         <h2>A very cool slogan or catchphrase.</h2>
       </div>
     </div>
   </section>
-  <footer>
+  <footer class="center">
     <ul>
       <p>About us</p>
       <li>history</li>
