--- a/Projektarbete/index.html
+++ b/Projektarbete/index.html
@@ -17,12 +17,9 @@
         <div class="nav-logo center">
           <div class="logo">
             <a href="#">
-              <img src="img/logo.PNG" alt="logo">
+              <img src="img/logic-logo.PNG" alt="logo">
             </a>
           </div>
-          <a href="#">
-            <p>company</p>
-          </a>
         </div>
         <div onclick="toggleMenu()" class="menu-icon">
           <img class="icon" src="img/menu.svg" alt="menu">
@@ -46,9 +43,6 @@
   <section id="section-zero" class="center">
     <div class="background-image background1 center">
       <div class="banner center">
-        <div class="container center">
-          <h1>company</h1>
-        </div>
       </div>
     </div>
   </section>
